# cxxmcp-gatewayd

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  audit_events.md  roadmap.md
examples/: gatewayd.example.json
packaging/launchd/: com.cxxmcp.gatewayd.plist
packaging/systemd/: cxxmcp-gatewayd.service
packaging/windows/: install-service.ps1  uninstall-service.ps1
src/: main.cpp
